Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3523

Wizard template system doesn't show correctly multiple QComboBox'es

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • Qt Creator 2.1.0
    • Qt Creator 2.1.0-rc1
    • All Other Issues
    • None
    • Linux 2.6.37-12-generic #26-Ubuntu SMP Wed Jan 5 18:42:49 UTC 2011 i686 GNU/Linux
    • ee83c99c9b3e9907272cd4b9aff3beb559f34806

      I'm developing a custom wizard, and I noticed that you can add only one QComboBox object inside the wizard.xml file because, if multiple combo boxes are added, only the first is correctly displayed with all its subitems.
      For example, when my configuration file contains these entries:

      <field name="BASECLASS">
      <fieldcontrol name="inheritance_combobox" class="QComboBox" defaultindex="0">
      <comboentries>
      <comboentry value="Foo">
      <comboentrytext>Foo</comboentrytext>
      </comboentry>
      <comboentry value="Bar">
      <comboentrytext>Bar</comboentrytext>
      </comboentry>
      </comboentries>
      </fieldcontrol>
      <fielddescription>AClass Inherits from:</fielddescription>
      </field>
      <field name="OTHERBASECLASS">
      <fieldcontrol name="other_inheritance_combobox" class="QComboBox" defaultindex="0">
      <comboentries>
      <comboentry value="OtherFoo">
      <comboentrytext>OtherFoo</comboentrytext>
      </comboentry>
      <comboentry value="OtherBar">
      <comboentrytext>OtherBar</comboentrytext>
      </comboentry>
      </comboentries>
      </fieldcontrol>
      <fielddescription>OtherClass Inherits from:</fielddescription>
      </field>

      the corresponding UI shows correctly the first combobox and its two options, Foo and Bar, but the second one is displayed without elements.
      If you swap the order of the two combobox declaration, now the "other_inheritance_combobox" and its options OtherFoo and OtherBar are shown, and the other one looks empty.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            polentino DIego [Po]lentino Casella
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes