Custom wizards: Fix multiple combo boxes.

Items of subsequent combo boxes were not displayed since
the counter was not reset.

Reviewed-by: con
Task-number: QTCREATORBUG-3523