src/plugins/projectexplorer/customwizard/customwizardparameters.cpp
@@ -665,6 +665,7 @@ CustomWizardParameters::ParseResult
             case ParseWithinFields:  // Leaving a field element
                 fields.push_back(field);
                 field.clear();
+                comboEntryCount = 0;
                 break;
             case ParseWithinComboEntries:
                 comboEntryCount++;
